GitVersion1/objects/PotentialEstimateForm__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Product_Function__c</fullName>
        <label>Product Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfCalculation__c</fullName>
        <label>TypeOfCalculation</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inclusion_per_CFE__c</fullName>
        <label>% inclusion per CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Potential Estimate Form</label>
</CustomObject>